# trachoma-amis-integration

./: .gitignore  Dockerfile  LICENSE  README-docker-fitting.md  README-fitting.html  README-fitting.md  README.md  RunProjectionsTo2026.py  RunProjectionsTo2026_stop_importation.py  amis_integration.py  preprocess_for_projections.R  pyproject.toml  realocate_InputPars_MTP.R  runFitting.sh  runProj.sh  run_container.sh  run_fit_and_process.sh  run_historic_simulations.py  run_historic_simulations.sh  run_pipeline.py  run_proj.sh  run_realocation_InputPars.sh  samplePars.sh  sandbox.py  setup_r_env.R  trachoma_fitting.R  trachoma_fitting_ctd.R
.github/workflows/: test.yml
Maps/: Codebook_IU_Trachoma.xlsx  prepare_histories_and_maps.R  prepare_histories_projections.R  runPrep.sh  runPrep_projections.sh  trachoma_IU_Match_PB.csv
fitting-prep/scripts/: prepare_histories_and_maps.R  prepare_histories_projections.R
fitting/scripts/: amis_integration.py  trachoma_fitting.R
fitting/scripts/trachoma_amis/: __init__.py  amis_integration.py  trachoma_params.py
post_AMIS_analysis/: plot_trachoma_fits_mtp.R
post_AMIS_analysis/summaries/: trachoma-actually-cut-down.Rmd  trachoma-cut-down.Rmd  trachoma-summaries.Rmd
projections-prep/scripts/: prepare_histories_projections.R  preprocess_for_projections.R  realocate_InputPars_MTP.R
projections/scripts/: RunProjectionsTo2026.py
tests/: test_amis_integration.py
tests/testthat/: test_amis_integration.R
trachoma_amis/: __init__.py  amis_integration.py  simulation_setup.py  trachoma_params.py
(+1 files in other folders)
