[build-system]
requires = ["setuptools==70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trachoma_amis"]

[tool.setuptools.dynamic]
version = {attr = "trachoma_amis.__version__"}

[project]
name = "trachoma_amis"
dynamic = ["version"]
authors = [
  {name = "NTD Modelling Consortium"},
]
description = "Trachoma wrapper for AMIS"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.9"

# For later when model is on PyPI
dependencies = [
  "trachoma@git+https://github.com/NTD-Modelling-Consortium/ntd-model-trachoma",
]

[project.optional-dependencies]
dev = ["pytest"]
